tests/samples/failing/05.mlang
fn returns_string_but_declares_i32 || "this should cause a type error" : () -> i32;

// 何もしなくても、関数の定義自体がエラーになるはず
